--- a/projects-style.css
+++ b/projects-style.css
@@ -5,11 +5,23 @@ body {
 .container {
     display: grid;
     grid-template-columns: 30% 70%;
-    row-gap: 1rem;
+    row-gap: 2rem;
     column-gap: 1rem;
     margin: 1rem auto;
     max-width: 1000px;
     width: 90%;
+}
+
+.container-2 {
+    display: flex;
+    flex-direction: column;
+    row-gap: 2rem;
+    margin: 2rem auto;
+    max-width: 1000px;
+    width: 90%;
+    background-color: #939aa4;
+    text-align: center;
+
 }
 
 .container-a {
@@ -19,12 +31,11 @@ body {
 }
 
 .container-b {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    column-gap: 1rem;
-    justify-content: center;
+    display: flex;
+    flex-direction: row;
     align-items: center;
-    background-color: #939aa4;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .container-c {
@@ -34,12 +45,11 @@ body {
 }
 
 .container-d {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    column-gap: 1rem;
-    justify-content: center;
+    display: flex;
+    flex-direction: row;
     align-items: center;
-    background-color: #939aa4;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 .container-e {
@@ -49,13 +59,13 @@ body {
 }
 
 .container-f {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    column-gap: 1rem;
-    justify-content: center;
+    display: flex;
+    flex-direction: row;
     align-items: center;
-    background-color: #939aa4;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
+
 
 #virtualPet-1 {
     width: 175px;
@@ -110,5 +120,5 @@ h4 {
 
 footer {
     text-align: center;
-    margin-top: 500px;
+    margin-top: 350px;
 }
